<resources>
    <string name="app_name">Pole Position Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LogIn1">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear una cuenta:</string>
    <string name="register2">registrarse</string>
    <string name="register1">Registrarse</string>
    <string name="repeatPass">Repetir contraseña</string>
    <string name="haveAccount">Tengo una cuenta:</string>
    <string name="LogIn2">iniciar sesión</string>
    <string name="tittle">Pole Position Quiz</string>
    <string name="slogan">The Fastest Wins</string>
    <string name="start_quiz">Comenzar cuestionario</string>
    <string name="loading_question">Cargando pregunta...</string>
    <string name="notification_login_title">¡Bienvenido de vuelta!</string>
    <string name="notification_login_msg">La F1 te esperaba.</string>
    <string name="notification_register_title">¡Bienvenido a PPQ!</string>
    <string name="notification_register_msg">Te has registrado en PPQ.</string>
    <string name="check_mail_pass">Correo y constraseña incorrectos</string>
    <string name="empty_fields">No se permiten campos vacíos</string>
    <string name="invalid_mail">Escribe un correo válido</string>
    <string name="short_pass">La contraseña es demasiado corta</string>
    <string name="capital_pass">La contraseña debe contener al menos una letra mayúscula</string>
    <string name="equal_pass">Las contraseñas no coinciden</string>
    <string name="existing_account">Ya existe una cuenta con este correo</string>
    <string name="error_at_register">No se ha podido registrar</string>
    <string name="logout">Sesión cerrada</string>
    <string name="canceled_quiz">Cuestionario cancelado</string>
    <string name="load_error">Error al cargar</string>
    <string name="finished_quiz">¡Cuestionario terminado!</string>
    <string name="notifications">Debes aceptar para poder recibir notificaciones</string>
    <string name="quiz_summary">Resumen del cuestionario</string>
    <string name="points">Puntos:</string>
    <string name="back_to_home">Volver al inicio</string>
    <string name="total_score">Puntuación total</string>
    <string name="total_questions">Preguntas totales</string>
    <string name="total_quizzes">Cuestionarios totales</string>
    <string name="correct_answers">Respuestas correctas</string>
    <string name="incorrect_answers">Respuestas incorrectas</string>
    <string name="question_label">Pregunta</string>
    <string name="correct_label">Correcto</string>
    <string name="incorrect_label">Incorrecto</string>
    <string name="show_stats">Mostrar estadísticas</string>
    <string name="statistics">Estadísticas</string>
    <string name="back">Volver</string>
</resources>